# kriechen

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  cogs.py  main.py  pyproject.toml  setup.cfg
crawler/: TODO  cogs.py  consumer.py  crawler.py  event_bus.py  events.py  listeners.py  main.py  producer.py  registry.py  tagesschau.py  transformer.py
data/: f1.txt  f2.txt  f3.txt  f4.txt  f5.txt
docs/: conf.py  index.rst
src/: __init__.py  consumer.py  crawler.py  event_bus.py  events.py  listeners.py  main.py  page.py  producer.py  registry.py  site_crawler.py  spider.py  transformer.py
tests/: assets.py  conftest.py  test_event_bus.py  test_site_crawler.py  test_spider.py
