[metadata]
name = Crawler
version = 0.0.1
author = Peleke Sengstacke
author_email = peleke.s@pm.me
description = Lightly configurable Queue-based crawler for processing entities that themselves generate entities for processing.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://dev.azure.com/cyber-x/Cyber.X/_git/classroom-management-api
license = GPLv3
license_files = LICENSE
classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
packages = find:
include_package_data = True
install_requires = 
    aiodns==3.0.0
    aiofiles==23.1.0
    aiohttp==3.8.4
    aiosignal==1.3.1
    async-timeout==4.0.2
    attrs==22.2.0
    beautifulsoup4==4.11.2
    Brotli==1.0.9
    cffi==1.15.1
    charset-normalizer==3.0.1
    click==8.1.3
    frozenlist==1.3.3
    idna==3.4
    joblib==1.2.0
    multidict==6.0.4
    nltk==3.8.1
    numpy==1.24.2
    pycares==4.3.0
    pycparser==2.21
    regex==2022.10.31
    soupsieve==2.4
    tqdm==4.64.1
    uvloop==0.17.0
    yarl==1.8.2

[options.packages.find]
where =
exclude =
    tests*

[tool:pytest]
testpaths = tests
addopts = --cov
xfail_strict = True

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = False

[tox:tox]
isolated_build = True
envlist = py311

[testimports]
deps =
    pydantic
    pytest
    pytest-asyncio
    pytest-cov
    pytest-randomly

[testenv]
commands =
    pytest {posargs}
deps =
    {[testimports]deps}

[mypy]
python_version = 3.11
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[testenv:docs-start]
deps =
    sphinx
    {[testimports]deps}
commands =
    sphinx-quickstart docs

[testenv:docs-build]
deps =
    sphinx
    {[testimports]deps}
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        ./
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[testenv:docs-dev]
deps =
    sphinx
    sphinx-autobuild
    {[testimports]deps}
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        .
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/
    sphinx-autobuild -n -W -b html docs/ docs/_build/ --port 9876

[testenv:typecheck]
deps =
    pytest
    mypy
    types-requests
commands =
    mypy --ignore-missing-imports {posargs:.}

[testenv:format]
skip_install = True
deps =
    black
commands = 
    black {posargs:--diff --check .}

[flake8]
max-line-length = 120
count = True
format = pylint
indent-size = 2
statistics = True
tee = True
max-complexity = 15
hang-closing = True
ignore = E125,E126,E133,W503,F821,E731,B009
exclude =
    .venv
    .tox
    __pycache__
    throwaway

[testenv:lint]
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:.}